--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
    <!-- Custom styles for this template -->
    <link href="css/main.css" rel="stylesheet">
+
+   <!-- Datatable CSS -->
+  <link href="css/dataTables.bootstrap4.min.css" rel="stylesheet">
+
   </head>
 
   <body>
@@ -21,12 +25,12 @@
     <button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">Event Manager</a>
+    <a class="navbar-brand" href="index.html">Event Manager</a>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
        <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
        </li>
        <li class="nav-item">
         <a class="nav-link" href="#">Profile</a>
@@ -35,10 +39,6 @@
         <a class="nav-link" href="#">Help</a>
        </li>
       </ul>
-      <form class="form-inline mt-2 mt-md-0">
-       <input class="form-control mr-sm-2" type="text" placeholder="Search">
-       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
    </nav>
 
@@ -56,7 +56,10 @@
           <a class="nav-link" href="#">Events By University</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Request New RSO</a>
+          <a class="nav-link" href="#">Event Map</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="RSORequest.html">Request New RSO</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Create New Event</a>
@@ -121,7 +124,7 @@
            <tr>
             <th>#</th>
             <th>Name</th>
-            <th>Date</th>
+            <th>Time</th>
             <th>RSO</th>
             <th>Duration</th>
            </tr>
@@ -253,6 +256,10 @@
    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
    <script src="js/bootstrap.min.js"></script>
+   <script src="js/jquery-1.12.4.js"></script>
+   <script src="js/jquery.dataTables.min.js"></script>
+   <script src="js/dataTables.bootstrap4.min.js"></script>
+   <script src="js/myEvents.js"></script>
 
 
 
