--- a/myEvents.html
+++ b/myEvents.html
@@ -1,3 +1,4 @@
+<!--myEvents.html 3/21/17-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,6 +13,10 @@
    <!-- Bootstrap core CSS -->
    <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
    <link href="css/bootstrap.css" rel="stylesheet">
+   <link href="css/bootstrap.min.css" rel="stylesheet">
+   <link href="css/bootstrap-grid.css" rel="stylesheet">
+   <link href="css/bootstrap-theme.css" rel="stylesheet">
+   <link href="css/bootstrap-reboot.css" rel="stylesheet">
 
    <!-- Custom styles for this template -->
    <link href="css/main.css" rel="stylesheet">
@@ -71,7 +76,7 @@
       <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
        <h2>My Events</h2>
        <div class="table-responsive">
-        <table id="myEvents" class="table table-striped table-hover table-bordered" cellspacing="0" width="100%">
+        <table id="myEventsTable" class="table table-striped table-hover table-bordered" cellspacing="0" width="100%">
           <thead>
            <tr>
             <th>#</th>
