add css inclusions and link updates

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--index.html 3/21/17-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,6 +12,10 @@
 
    <!-- Bootstrap core CSS -->
    <link href="css/bootstrap.min.css" rel="stylesheet">
+   <link href="css/bootstrap.min.css" rel="stylesheet">
+   <link href="css/bootstrap-grid.css" rel="stylesheet">
+   <link href="css/bootstrap-theme.css" rel="stylesheet">
+   <link href="css/bootstrap-reboot.css" rel="stylesheet">
 
    <!-- Custom styles for this template -->
    <link href="css/main.css" rel="stylesheet">
