add links to other pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
           <a class="nav-link" href="RSORequest.html">Request New RSO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Create New Event</a>
+          <a class="nav-link" href="EventRequest.html">Create New Event</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">RSO Search</a>
         </li>
        </ul>
 
