add links to other pages

--- a/myEvents.html
+++ b/myEvents.html
@@ -68,14 +68,17 @@
           <a class="nav-link" href="RSORequest.html">Request New RSO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Create New Event</a>
+          <a class="nav-link" href="EventRequest.html">Create New Event</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">RSO Search</a>
         </li>
        </ul>
       </nav>
 
       <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
        <h2>My Events</h2>
-       <div class="table-responsive">
+       
         <table id="myEventsTable" class="table table-striped table-hover table-bordered" cellspacing="0" width="100%">
           <thead>
            <tr>
@@ -201,7 +204,7 @@
            </tr>
           </tbody>
         </table>
-        </div>
+        
       </main>
     </div>
    </div>
@@ -212,11 +215,11 @@
    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+ <script src="js/dataTables.bootstrap4.min.js"></script>
    <script src="js/bootstrap.min.js"></script>
    <script src="js/jquery-1.12.4.js"></script>
    <script src="js/jquery.dataTables.min.js"></script>
-   <script src="js/dataTables.bootstrap4.min.js"></script>
-   <script src="js/myEvents.js"></script>
+  <script src="js/myEvents.js"></script>
 
 
   </body>
