--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a class="nav-link" href="EventRequest.html">Create New Event</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">RSO Search</a>
+          <a class="nav-link" href="RSOSearch.html">RSO Search</a>
         </li>
        </ul>
 
@@ -126,8 +126,7 @@
        </section>
 
        <h2>Today's Events</h2>
-       <div class="table-responsive">
-        <table class="table table-striped">
+        <table id="eventsTable" class="table table-striped table-hover table-bordered" cellspacing="0" width="100%">
           <thead>
            <tr>
             <th>#</th>
@@ -252,7 +251,6 @@
            </tr>
           </tbody>
         </table>
-       </div>
       </main>
     </div>
    </div>
@@ -263,11 +261,11 @@
    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+   <script src="js/dataTables.bootstrap4.min.js"></script>
    <script src="js/bootstrap.min.js"></script>
    <script src="js/jquery-1.12.4.js"></script>
    <script src="js/jquery.dataTables.min.js"></script>
-   <script src="js/dataTables.bootstrap4.min.js"></script>
-   <script src="js/myEvents.js"></script>
+   <script src="js/index.js"></script>
 
 
 
