--- a/myEvents.html
+++ b/myEvents.html
@@ -71,7 +71,7 @@
           <a class="nav-link" href="EventRequest.html">Create New Event</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">RSO Search</a>
+          <a class="nav-link" href="RSOSearch.html">RSO Search</a>
         </li>
        </ul>
       </nav>
