add empty option to select fields

--- a/EventRequest.html
+++ b/EventRequest.html
@@ -101,6 +101,7 @@
 					    		<div class="form-group">
 					    			<label for="type">Event Type</label>
 					    			<select id="type" class="form-control">
+					    				<option></option>
 					    				<option value="social">Social</option>
 					    				<option value="fundraising">Fundraising</option>
 					    				<option value="speaker">Featured Speaker</option>
@@ -113,6 +114,7 @@
 				    			<div class="form-group">
 					    			<label for="cat">Category</label>
 					    			<select id="cat" class="form-control">
+					    				<option></option>
 					    				<option value="public">Public</option>
 					    				<option value="private">Private</option>
 					    				<option value="rso">RSO Members Only</option>
