add empty option to select

--- a/RSORequest.html
+++ b/RSORequest.html
@@ -99,6 +99,7 @@
 					    		<div class="form-group">
 					    			<label for="school">University/Domain</label>
 					    			<select id="school" class="form-control">
+					    				<option></option>
 					    				<option>UCF / @ucf.edu</option>
 					    				<option>UF / @uf.edu</option>
 					    				<option>FSU / @fsu.edu</option>
