links to new pages

--- a/EventRequest.html
+++ b/EventRequest.html
@@ -67,10 +67,10 @@
 			 <a class="nav-link" href="myEvents.html">My Events</a>
 		  </li>
 		  <li class="nav-item">
-			 <a class="nav-link" href="#">Events By University</a>
+			 <a class="nav-link" href="UniEvents.html">Events By University</a>
 		  </li>
 		  <li class="nav-item">
-          <a class="nav-link" href="#">Event Map</a>
+          <a class="nav-link" href="EventMap.html">Event Map</a>
         </li>
 		  <li class="nav-item">
 			 <a class="nav-link" href="RSORequest.html">Request New RSO</a>
