--- a/RSORequest.html
+++ b/RSORequest.html
@@ -58,10 +58,10 @@
 			 <a class="nav-link" href="myEvents.html">My Events</a>
 		  </li>
 		  <li class="nav-item">
-			 <a class="nav-link" href="#">Events By University</a>
+			 <a class="nav-link" href="UniEvents.html">Events By University</a>
 		  </li>
 		  <li class="nav-item">
-          <a class="nav-link" href="#">Event Map</a>
+          <a class="nav-link" href="EventMap.html">Event Map</a>
         </li>
 		  <li class="nav-item">
 			 <a class="nav-link active" href="RSORequest.html">Request New RSO<span class="sr-only">(current)</span></a>
