--- a/myEvents.html
+++ b/myEvents.html
@@ -59,10 +59,10 @@
           <a class="nav-link active" href="myEvents.html">My Events<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Events By University</a>
+          <a class="nav-link" href="UniEvents.html">Events By University</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Event Map</a>
+          <a class="nav-link" href="EventMap.html">Event Map</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="RSORequest.html">Request New RSO</a>
