--- a/loginBootstrap.html
+++ b/loginBootstrap.html
@@ -9,10 +9,10 @@
               <div class="row">
                   <div class="col-xs">
                       <div class="well">
-                          <form id="loginForm" method="POST" action="/login/" novalidate="novalidate">
+                          <form id="loginForm" method="POST" action="/project/index.html" novalidate="novalidate">
                               <div class="form-group">
-                                  <label for="username" class="control-label">Username</label>
-                                  <input type="text" class="form-control" id="username" name="username" value="" required="" title="Please enter you username" placeholder="example@knights.ucf.edu">
+                                  <label for="email" class="control-label">Email</label>
+                                  <input type="text" class="form-control" id="email" name="email" value="" required="" title="Please enter you username" placeholder="example@knights.ucf.edu">
                                   <span class="help-block"></span>
                               </div>
                               <div class="form-group">
@@ -23,7 +23,8 @@
                               <div id="loginErrorMsg" class="alert alert-error hide">Wrong username or password</div>
                               </div>
                               <button type="submit" class="btn btn-success btn-block">Login</button>
-                              <a href="/register/" class="btn btn-default btn-block">Register</a>
+                             <!-- <button type="submit" class="btn btn-default btn-block">Register</button> -->
+                              <a href="/createFormBS.html" class="btn btn-default btn-block">Register</a>
                           </form>
                       </div>
                   </div>
