add links and navbarjs

--- a/EventMap.html
+++ b/EventMap.html
@@ -29,6 +29,7 @@
   <script src="js/dataTables.bootstrap4.min.js"></script>
   <script src="js/EventRequest.js"></script>
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+  <script src="js/navBar.js"></script>
 
   <style>
       /* Always set the map height explicitly to define the size of the div
@@ -87,11 +88,14 @@
        <a class="nav-link" href="RSORequest.html">Request New RSO</a>
       </li>
       <li class="nav-item">
-       <a class="nav-link" href="EventRequest.hmtl">Create New Event</a>
+       <a id="createEventNav" class="nav-link" href="EventRequest.hmtl">Create New Event</a>
       </li>
       <li class="nav-item">
        <a class="nav-link" href="RSOSearch.html">RSO Search</a>
       </li>
+      <li class="nav-item">
+          <a id="createUniNav" class="nav-link" href="CreateNewUni.html">Create New University</a>
+        </li>
      </ul>
     </nav>
 
