--- a/EventRequest.html
+++ b/EventRequest.html
@@ -31,6 +31,7 @@
 	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
     <script src="js/locationpicker.jquery.min.js"></script>
+    <script src="js/navBar.js"></script>
 
   </head>
 
@@ -76,11 +77,14 @@
 			 <a class="nav-link" href="RSORequest.html">Request New RSO</a>
 		  </li>
 		  <li class="nav-item">
-			 <a class="nav-link active" href="EventRequest.hmtl">Create New Event<span class="sr-only">(current)</span></a>
+			 <a id="createEventNav" class="nav-link active" href="EventRequest.hmtl">Create New Event<span class="sr-only">(current)</span></a>
 		  </li>
 		  <li class="nav-item">
 			 <a class="nav-link" href="RSOSearch.html">RSO Search</a>
 		  </li>
+		  <li class="nav-item">
+          <a id="createUniNav" class="nav-link" href="CreateNewUni.html">Create New University</a>
+        </li>
 		 </ul>
 		</nav>
 
