links and navbar js

--- a/RSORequest.html
+++ b/RSORequest.html
@@ -67,11 +67,14 @@
 			 <a class="nav-link active" href="RSORequest.html">Request New RSO<span class="sr-only">(current)</span></a>
 		  </li>
 		  <li class="nav-item">
-			 <a class="nav-link" href="EventRequest.html">Create New Event</a>
+			 <a id="createEventNav" class="nav-link" href="EventRequest.html">Create New Event</a>
 		  </li>
 		  <li class="nav-item">
 			 <a class="nav-link" href="RSOSearch.html">RSO Search</a>
 		  </li>
+		  <li class="nav-item">
+          <a id="createUniNav" class="nav-link" href="CreateNewUni.html">Create New University</a>
+        </li>
 		 </ul>
 		</nav>
 
@@ -153,7 +156,7 @@
 	<script src="js/jquery.dataTables.min.js"></script>
 	<script src="js/dataTables.bootstrap4.min.js"></script>
 	<script src="js/RSORequest.js"></script>
-
+	<script src="js/navBar.js"></script>
 
   </body>
 </html>
