--- a/RSOSearch.html
+++ b/RSOSearch.html
@@ -68,10 +68,13 @@
           <a class="nav-link" href="RSORequest.html">Request New RSO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="EventRequest.html">Create New Event</a>
+          <a id="createEventNav" class="nav-link" href="EventRequest.html">Create New Event</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="RSOSearch.html">RSO Search<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a id="createUniNav" class="nav-link" href="CreateNewUni.html">Create New University</a>
         </li>
        </ul>
       </nav>
@@ -231,7 +234,8 @@
    <script src="js/bootstrap.min.js"></script>
    <script src="js/jquery-1.12.4.js"></script>
    <script src="js/jquery.dataTables.min.js"></script>
-  <script src="js/RSOSearch.js"></script>
+   <script src="js/RSOSearch.js"></script>
+   <script src="js/navBar.js"></script>
 
 
   </body>
