--- a/index.html
+++ b/index.html
@@ -66,37 +66,16 @@
         <li class="nav-item">
           <a class="nav-link" href="RSORequest.html">Request New RSO</a>
         </li>
-        <li class="nav-item">
+        <li id="createEventNav" class="nav-item">
           <a class="nav-link" href="EventRequest.html">Create New Event</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="RSOSearch.html">RSO Search</a>
         </li>
+        <li class="nav-item">
+          <a id="createUniNav" class="nav-link" href="CreateNewUni.html">Create New University</a>
+        </li>
        </ul>
-
-       <!--<ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Create Event</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">One more nav</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Another nav item</a>
-        </li>
-       </ul>-->
-
-       <!--<ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Nav item again</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">One more nav</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Another nav item</a>
-        </li>
-       </ul>-->
       </nav>
 
       <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
@@ -266,7 +245,7 @@
    <script src="js/jquery-1.12.4.js"></script>
    <script src="js/jquery.dataTables.min.js"></script>
    <script src="js/index.js"></script>
-
+   <script src="js/navBar.js"></script>
 
 
   </body>
