--- a/myEvents.html
+++ b/myEvents.html
@@ -68,10 +68,13 @@
           <a class="nav-link" href="RSORequest.html">Request New RSO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="EventRequest.html">Create New Event</a>
+          <a id="createEventNav" class="nav-link" href="EventRequest.html">Create New Event</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="RSOSearch.html">RSO Search</a>
+        </li>
+        <li class="nav-item">
+          <a id="createUniNav" class="nav-link" href="CreateNewUni.html">Create New University</a>
         </li>
        </ul>
       </nav>
@@ -215,11 +218,12 @@
    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
- <script src="js/dataTables.bootstrap4.min.js"></script>
+   <script src="js/dataTables.bootstrap4.min.js"></script>
    <script src="js/bootstrap.min.js"></script>
    <script src="js/jquery-1.12.4.js"></script>
    <script src="js/jquery.dataTables.min.js"></script>
-  <script src="js/myEvents.js"></script>
+   <script src="js/myEvents.js"></script>
+   <script src="js/navBar.js"></script>
 
 
   </body>
