created userrole at login.

--- a/loginBootstrap.html
+++ b/loginBootstrap.html
@@ -9,16 +9,14 @@
               <div class="row">
                   <div class="col-xs">
                       <div class="well">
-                          <form id="loginForm" method="POST" action="/project/index.html" novalidate="novalidate">
+                          <form id="loginForm" method="POST" action="/login.php">
                               <div class="form-group">
                                   <label for="email" class="control-label">Email</label>
-                                  <input type="text" class="form-control" id="email" name="email" value="" required="" title="Please enter you username" placeholder="example@knights.ucf.edu">
-                                  <span class="help-block"></span>
+                                  <input type="text" class="form-control" id="email" name="email" value="" required="true" title="Please enter you username" placeholder="example@knights.ucf.edu">
                               </div>
                               <div class="form-group">
                                   <label for="password" class="control-label">Password</label>
                                   <input type="password" class="form-control" id="password" name="password" value="" required="" title="Please enter your password">
-                                  <span class="help-block"></span>
                               </div>
                               <div id="loginErrorMsg" class="alert alert-error hide">Wrong username or password</div>
                               </div>
