--- a/createFormBS.html
+++ b/createFormBS.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
-<form class="form-horizontal" action="/config.php" method="post">
+<form class="form-horizontal" action="/createAccount.php" method="post">
 <fieldset>
 
 <!-- Form Name -->
@@ -10,7 +10,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="email">Email</label>  
   <div class="col-md-4">
-  <input id="email" name="email" type="text" placeholder="placeholder" class="form-control input-md" required=""> 
+  <input id="email" name="email" type="text" placeholder="johndoe@ucf.edu" class="form-control input-md" required=""> 
   </div>
 </div>
 
@@ -18,7 +18,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="first_name">First name</label>  
   <div class="col-md-4">
-  <input id="first_name" name="first_name" type="text" placeholder="placeholder" class="form-control input-md">
+  <input id="first_name" name="first_name" type="text" placeholder="John" class="form-control input-md">
   </div>
 </div>
 
@@ -26,7 +26,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="last_name">Last name</label>  
   <div class="col-md-4">
-  <input id="last_name" name="last_name" type="text" placeholder="placeholder" class="form-control input-md">
+  <input id="last_name" name="last_name" type="text" placeholder="Doe" class="form-control input-md">
   </div>
 </div>
 
@@ -34,7 +34,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="password">Password</label>  
   <div class="col-md-4">
-  <input id="password" name="password" type="password" placeholder="placeholder" class="form-control input-md" required="">
+  <input id="password" name="password" type="password" placeholder="********" class="form-control input-md" required="">
   </div>
 </div>
 
@@ -42,7 +42,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="passwordConfirm">Confirm Password</label>  
   <div class="col-md-4">
-  <input id="passwordConfirm" name="passwordConfirm" type="password" placeholder="placeholder" class="form-control input-md" required="">
+  <input id="passwordConfirm" name="passwordConfirm" type="password" placeholder="********" class="form-control input-md" required="">
   </div>
 </div>
 
@@ -60,12 +60,20 @@
 
 
 <!-- Buttons -->
-<div class="btn-toolbar">
+<div class="form-group">
   <div class="col-sm-12">
     <div class="text-center">
       <button id="regButton" type="submit" name="regButton" class="btn btn-primary center-block">Register!</button>
-      <button id="cancelbutton" name="cancelbutton" class="btn btn-secondary center-block">Cancel</button>
-    </div>
+      </div>
+  </div>
+</div>
+
+
+<div class="form-group">
+  <div class="col-sm-12">
+    <div class="text-center">
+      <a href="/loginBootstrap.html" id="cancelbutton" name="cancelbutton" class="btn btn-default">Cancel</a>
+      </div>
   </div>
 </div>
 
