Fake table values
fake it til u make it

--- a/index.html
+++ b/index.html
@@ -118,78 +118,78 @@
           <tbody>
            <tr>
             <td>1,001</td>
-            <td>Lorem</td>
-            <td>ipsum</td>
-            <td>dolor</td>
-            <td>sit</td>
+            <td>UCF Golf Fundraiser</td>
+            <td>6:00 pm</td>
+            <td>UCF Golf</td>
+            <td>3 hrs</td>
            </tr>
            <tr>
             <td>1,002</td>
-            <td>amet</td>
-            <td>consectetur</td>
-            <td>adipiscing</td>
-            <td>elit</td>
+            <td>UF Rowing Formal</td>
+            <td>9:00 pm</td>
+            <td>UF Rowing</td>
+            <td>4 hrs</td>
            </tr>
            <tr>
             <td>1,003</td>
-            <td>Integer</td>
-            <td>nec</td>
-            <td>odio</td>
-            <td>Praesent</td>
+            <td>23rd Annual Chess Competition</td>
+            <td>10:00 am</td>
+            <td>FSU Chess</td>
+            <td>8 hrs</td>
            </tr>
            <tr>
             <td>1,003</td>
-            <td>libero</td>
-            <td>Sed</td>
-            <td>cursus</td>
-            <td>ante</td>
+            <td>Henley on th Hooch</td>
+            <td>5:00 am</td>
+            <td>Georgiat Tech Rowing</td>
+            <td>10 hrs</td>
            </tr>
            <tr>
             <td>1,004</td>
-            <td>dapibus</td>
-            <td>diam</td>
-            <td>Sed</td>
-            <td>nisi</td>
+            <td>Pepsi Appreciation Day</td>
+            <td>6:30</td>
+            <td>Soda Fanatics</td>
+            <td>3 hrs</td>
            </tr>
            <tr>
             <td>1,005</td>
-            <td>Nulla</td>
-            <td>quis</td>
-            <td>sem</td>
-            <td>at</td>
+            <td>Knightthon</td>
+            <td>10:22 pm</td>
+            <td>KKB</td>
+            <td>2 hrs</td>
            </tr>
            <tr>
             <td>1,006</td>
-            <td>nibh</td>
-            <td>elementum</td>
-            <td>imperdiet</td>
-            <td>Duis</td>
+            <td>UCF Golf Practice</td>
+            <td>5:00 am</td>
+            <td>UCF Golf</td>
+            <td>5 hrs</td>
            </tr>
            <tr>
             <td>1,007</td>
-            <td>sagittis</td>
-            <td>ipsum</td>
-            <td>Praesent</td>
-            <td>mauris</td>
+            <td>Fencing Knights Meeting</td>
+            <td>4:00 pm</td>
+            <td>Fencing Knights</td>
+            <td>4 hrs</td>
            </tr>
            <tr>
             <td>1,008</td>
-            <td>Fusce</td>
-            <td>nec</td>
-            <td>tellus</td>
-            <td>sed</td>
+            <td>SJW Practice</td>
+            <td>1:00 am</td>
+            <td>SJW's of FSU</td>
+            <td>30 min</td>
            </tr>
            <tr>
             <td>1,009</td>
-            <td>augue</td>
-            <td>semper</td>
-            <td>porta</td>
-            <td>Mauris</td>
+            <td>FSU Swim Meet</td>
+            <td>8:00 am</td>
+            <td>FSU Swim</td>
+            <td>8 hrs</td>
            </tr>
            <tr>
             <td>1,010</td>
-            <td>massa</td>
-            <td>Vestibulum</td>
+            <td>UCF Golf Practice</td>
+            <td>5:00 am</td>
             <td>lacinia</td>
             <td>arcu</td>
            </tr>
