working on createvent

--- a/index_orig.html
+++ b/index_orig.html
@@ -66,16 +66,37 @@
         <li class="nav-item">
           <a class="nav-link" href="RSORequest.html">Request New RSO</a>
         </li>
-        <li id="createEventNav" class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="EventRequest.html">Create New Event</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="RSOSearch.html">RSO Search</a>
         </li>
-        <li class="nav-item">
-          <a id="createUniNav" class="nav-link" href="CreateNewUni.html">Create New University</a>
-        </li>
        </ul>
+
+       <!--<ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Create Event</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">One more nav</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Another nav item</a>
+        </li>
+       </ul>-->
+
+       <!--<ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Nav item again</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">One more nav</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Another nav item</a>
+        </li>
+       </ul>-->
       </nav>
 
       <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
@@ -118,78 +139,78 @@
           <tbody>
            <tr>
             <td>1,001</td>
-            <td>UCF Golf Fundraiser</td>
-            <td>6:00 pm</td>
-            <td>UCF Golf</td>
-            <td>3 hrs</td>
+            <td>Lorem</td>
+            <td>ipsum</td>
+            <td>dolor</td>
+            <td>sit</td>
            </tr>
            <tr>
             <td>1,002</td>
-            <td>UF Rowing Formal</td>
-            <td>9:00 pm</td>
-            <td>UF Rowing</td>
-            <td>4 hrs</td>
+            <td>amet</td>
+            <td>consectetur</td>
+            <td>adipiscing</td>
+            <td>elit</td>
            </tr>
            <tr>
             <td>1,003</td>
-            <td>23rd Annual Chess Competition</td>
-            <td>10:00 am</td>
-            <td>FSU Chess</td>
-            <td>8 hrs</td>
+            <td>Integer</td>
+            <td>nec</td>
+            <td>odio</td>
+            <td>Praesent</td>
            </tr>
            <tr>
             <td>1,003</td>
-            <td>Henley on th Hooch</td>
-            <td>5:00 am</td>
-            <td>Georgiat Tech Rowing</td>
-            <td>10 hrs</td>
+            <td>libero</td>
+            <td>Sed</td>
+            <td>cursus</td>
+            <td>ante</td>
            </tr>
            <tr>
             <td>1,004</td>
-            <td>Pepsi Appreciation Day</td>
-            <td>6:30</td>
-            <td>Soda Fanatics</td>
-            <td>3 hrs</td>
+            <td>dapibus</td>
+            <td>diam</td>
+            <td>Sed</td>
+            <td>nisi</td>
            </tr>
            <tr>
             <td>1,005</td>
-            <td>Knightthon</td>
-            <td>10:22 pm</td>
-            <td>KKB</td>
-            <td>2 hrs</td>
+            <td>Nulla</td>
+            <td>quis</td>
+            <td>sem</td>
+            <td>at</td>
            </tr>
            <tr>
             <td>1,006</td>
-            <td>UCF Golf Practice</td>
-            <td>5:00 am</td>
-            <td>UCF Golf</td>
-            <td>5 hrs</td>
+            <td>nibh</td>
+            <td>elementum</td>
+            <td>imperdiet</td>
+            <td>Duis</td>
            </tr>
            <tr>
             <td>1,007</td>
-            <td>Fencing Knights Meeting</td>
-            <td>4:00 pm</td>
-            <td>Fencing Knights</td>
-            <td>4 hrs</td>
+            <td>sagittis</td>
+            <td>ipsum</td>
+            <td>Praesent</td>
+            <td>mauris</td>
            </tr>
            <tr>
             <td>1,008</td>
-            <td>SJW Practice</td>
-            <td>1:00 am</td>
-            <td>SJW's of FSU</td>
-            <td>30 min</td>
+            <td>Fusce</td>
+            <td>nec</td>
+            <td>tellus</td>
+            <td>sed</td>
            </tr>
            <tr>
             <td>1,009</td>
-            <td>FSU Swim Meet</td>
-            <td>8:00 am</td>
-            <td>FSU Swim</td>
-            <td>8 hrs</td>
+            <td>augue</td>
+            <td>semper</td>
+            <td>porta</td>
+            <td>Mauris</td>
            </tr>
            <tr>
             <td>1,010</td>
-            <td>UCF Golf Practice</td>
-            <td>5:00 am</td>
+            <td>massa</td>
+            <td>Vestibulum</td>
             <td>lacinia</td>
             <td>arcu</td>
            </tr>
@@ -245,7 +266,7 @@
    <script src="js/jquery-1.12.4.js"></script>
    <script src="js/jquery.dataTables.min.js"></script>
    <script src="js/index.js"></script>
-   <script src="js/navBar.js"></script>
+
 
 
   </body>
