--- a/EventRequest.html
+++ b/EventRequest.html
@@ -77,7 +77,7 @@
 			 <a class="nav-link" href="RSORequest.html">Request New RSO</a>
 		  </li>
 		  <li class="nav-item">
-			 <a id="createEventNav" class="nav-link active" href="EventRequest.hmtl">Create New Event<span class="sr-only">(current)</span></a>
+			 <a id="createEventNav" class="nav-link active" href="EventRequest.html">Create New Event<span class="sr-only">(current)</span></a>
 		  </li>
 		  <li class="nav-item">
 			 <a class="nav-link" href="RSOSearch.html">RSO Search</a>
@@ -100,12 +100,12 @@
 					<div id="successAlert" class="alert alert-success">
 					  <strong>Success!</strong> Your Event Request has been successfully submitted. 
 					</div>
-			    	<form id="genInfo">
+			    	<form id="genInfo" method="POST" action="/eventAction.php">
 				    	<div class="row">
 				    		<div class="col-md-12">
 				    			<div class="form-group">
 				    				<label for="title">Event Title</label>
-				    				<input class="form-control" id="title" type="text" placeholder="Enter Title">
+				    				<input type="text" class="form-control" id="title" name ="title" placeholder="Enter Title">
 				    			</div>
 				    		</div>
 				    	</div>
@@ -113,20 +113,21 @@
 				    		<div class="col-md-6">
 					    		<div class="form-group">
 					    			<label for="type">Event Type</label>
-					    			<select id="type" class="form-control">
+					    			<select id="type" name="type" class="form-control">
 					    				<option></option>
-					    				<option value="social">Social</option>
-					    				<option value="fundraising">Fundraising</option>
-					    				<option value="speaker">Featured Speaker</option>
-					    				<option value="banquet">Banquet</option>
-					    				<option value="competition">Competition</option>
+					    				<option value="sports">Social</option>
+					    				<option value="fundraiser">Fundraiser</option>
+					    				<option value="food">Food</option>
+					    				<option value="techtalks">Tech Talks</option>
+					    				<option value="tailgate">Tailgate</option>
+					    				<option value="other">Other</option>
 					    			</select>
 					    		</div>
 				    		</div>
 				    		<div class="col-md-6">
 				    			<div class="form-group">
 					    			<label for="cat">Category</label>
-					    			<select id="cat" class="form-control">
+					    			<select id="cat" name="cat" class="form-control">
 					    				<option></option>
 					    				<option value="public">Public</option>
 					    				<option value="private">Private</option>
@@ -138,8 +139,8 @@
 				    	<div class="row">
 				    		<div class="col-md-12">
 					    		<div class="form-group">
-							        <label class="control-label">Description</label>
-							        <textarea id="description" class="form-control" rows="3"></textarea>
+							        <label class="control-label" for="description">Description</label>
+							        <textarea id="description" name="description" class="form-control" rows="3"></textarea>
 							    </div>
 				    		</div>
 				    	</div>
@@ -147,13 +148,13 @@
 				    		<div class="col-md-6">
 				    			<div class="form-group">
 				    				<label class="control-label" for="date">Date</label>
-				    				<input class="form-control" id="date" type="text" placeholder="mm/dd/yyyy">
+				    				<input class="form-control" id="date" name="date" type="text" placeholder="mm/dd/yyyy">
 				    			</div>
 				    		</div>
 				    		<div class="col-md-6">
 				    			<div class="form-group">
 				    				<label class="control-label" for="time">Time</label>
-				    				<input class="form-control" id="time" type="text" placeholder="hh:mm">
+				    				<input class="form-control" id="time" name="time" type="text" placeholder="hh:mm">
 				    			</div>
 				    		</div>
 				    	</div>
@@ -161,13 +162,13 @@
 				    		<div class="col-md-6">
 				    			<div class="form-group">
 				    				<label class="control-label" for="contact_phone">Contact Phone Number</label>
-				    				<input class="form-control" id="contact_phone" type="text" placeholder="xxx-xxx-xxxx">
+				    				<input class="form-control" id="contact_phone" name="contact_phone" type="text" placeholder="xxx-xxx-xxxx">
 				    			</div>
 				    		</div>
 				    		<div class="col-md-6">
 				    			<div class="form-group">
 				    				<label class="control-label" for="contact_email">Contact Email Address</label>
-				    				<input class="form-control" id="contact_email" type="email" aria-describedby="emailHelp" placeholder="Enter Event Contact Email">
+				    				<input class="form-control" id="contact_email" type="email" name="contact_email" aria-describedby="emailHelp" placeholder="Enter Event Contact Email">
 				    			</div>
 				    		</div>
 				    	</div>
@@ -185,10 +186,10 @@
 								                <div class="modal-body">
 								                    <div class="form-horizontal" style="width: 550px">
 								                        <div class="form-group">
-								                            <label class="col-sm-2 control-label">Location:</label>
+								                            <label class="col-sm-2 control-label" for="locationName">Location:</label>
 
 								                            <div class="col-sm-10">
-								                                <input type="text" class="form-control" id="us3-address" />
+								                                <input type="text" name="locationName" class="form-control" id="locationName" />
 								                            </div>
 								                        </div>
 								                        <div class="form-group">
