--- a/myEvents.html
+++ b/myEvents.html
@@ -93,7 +93,7 @@
            </tr>
           </thead>
           <tbody>
-           <tr>
+           <tr class="clickable-row" data-href='Event.html'>
             <td>1,001</td>
             <td>Lorem</td>
             <td>ipsum</td>
