--- a/EventRequest.html
+++ b/EventRequest.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<link rel="icon" href="images/favicon.ico">
 
 	<title>Event Manager</title>
 
-	<!-- Bootstrap core CSS -->
+	<!-- Bootstrap core CSS
 	<!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,17 +11,28 @@
 
 	<!-- Custom styles for this template -->
 	<link href="css/main.css" rel="stylesheet">
-	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+
+
+
+	 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script> 
+	 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script> 
 	<script src="js/bootstrap.min.js"></script>
 
-	<script src="js/jquery-1.12.4.js"></script>
-	<script src="js/jquery.dataTables.min.js"></script>
-	<script src="js/dataTables.bootstrap4.min.js"></script>
-	<script src="js/EventRequest.js"></script>
-	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
+	 <script src="js/jquery-1.12.4.js"></script> 
+	<script src="js/jquery.dataTables.min.js"></script> 
+	 <script src="js/dataTables.bootstrap4.min.js"></script>                                                
+	 <script src="js/EventRequest.js"></script>															
+	<!--	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>		eeeorrr!!!!	-->		
+
+
+
+	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places'></script> 
+
+
+
+
+
     <script src="js/locationpicker.jquery.min.js"></script>
     <script src="js/navBar.js"></script>
 
@@ -87,7 +90,7 @@
         </li>
 		 </ul>
 		</nav>
-
+ 
 		<main class="col-md-10 offset-sm-3 offset-md-2 pt-3">
 			<h2>Event Request Form</h2>
 		 	<div class="col-md-5">
@@ -100,8 +103,8 @@
 					<div id="successAlert" class="alert alert-success">
 					  <strong>Success!</strong> Your Event Request has been successfully submitted. 
 					</div>
-			    	<form id="genInfo" method="POST" action="/eventAction.php">
-				    	<div class="row">
+			<form id="infosubmit" method="POST" action="/eventAction.php">
+			  	    	<div class="row">
 				    		<div class="col-md-12">
 				    			<div class="form-group">
 				    				<label for="title">Event Title</label>
@@ -112,26 +115,26 @@
 				    	<div class="row">
 				    		<div class="col-md-6">
 					    		<div class="form-group">
-					    			<label for="type">Event Type</label>
-					    			<select id="type" name="type" class="form-control">
+					    			<label for="cat">Event Category</label>
+					    			<select id="cat" name="cat" class="form-control">
 					    				<option></option>
-					    				<option value="sports">Social</option>
-					    				<option value="fundraiser">Fundraiser</option>
-					    				<option value="food">Food</option>
-					    				<option value="techtalks">Tech Talks</option>
-					    				<option value="tailgate">Tailgate</option>
-					    				<option value="other">Other</option>
+					    				<option value="Sports">Social</option>
+					    				<option value="Fundraiser">Fundraiser</option>
+					    				<option value="Food">Food</option>
+					    				<option value="Tech Talks">Tech Talks</option>
+					    				<option value="Tailgate">Tailgate</option>
+					    				<option value="Other">Other</option>
 					    			</select>
 					    		</div>
 				    		</div>
 				    		<div class="col-md-6">
 				    			<div class="form-group">
-					    			<label for="cat">Category</label>
-					    			<select id="cat" name="cat" class="form-control">
+					    			<label for="type">Type</label>
+					    			<select id="type" name="type" class="form-control">
 					    				<option></option>
-					    				<option value="public">Public</option>
-					    				<option value="private">Private</option>
-					    				<option value="rso">RSO Members Only</option>
+					    				<option value="Public">Public</option>
+					    				<option value="Private">Private</option>
+					    				<option value="RSO">RSO Members Only</option>
 					    			</select>
 					    		</div>
 				    		</div>
@@ -175,7 +178,7 @@
 				    	<div class="row">
 				    		<div class="col-md-12">
 				    			<div class="form-group">
-				    				<button data-target="#us6-dialog" data-toggle="modal">Select Location</button>
+				    				<button type="button" class= "btn btn-info" href="modal" data-target="#us6-dialog" data-toggle="modal">Select Location</button>
 								    <div id="us6-dialog" class="modal fade">
 								        <div class="modal-dialog">
 								            <div class="modal-content">
@@ -248,20 +251,23 @@
 				    		<div class="col-md-6">
 				    			<div class="form-group">
 				    				<label class="control-label" for="latitude">Location Latitude</label>
-				    				<input class="form-control" id="latitude" type="text">
+				    				<input class="form-control" id="latitude" name="latitude" type="number">
 				    			</div>
 				    		</div>
 				    		<div class="col-md-6">
 				    			<div class="form-group">
 				    				<label class="control-label" for="longitude">Location Longitude</label>
-				    				<input class="form-control" id="longitude" type="email">
+				    				<input class="form-control" id="longitude" name="longitude" type="number">
 				    			</div>
 				    		</div>
 				    	</div>
+				
+
 				    	<div class="row">
+				    <!--	<form id="infosubmit" method="POST" action="/eventAction.php"> -->
 				    		<div class="col-md-3">
 				    			<div class="form-group pull-right">
-				    				<button type="button" id="submitBtn" class="form-control btn btn-primary">Submit</button>
+				    				<button type="submit" id="submitBtn" class="form-control btn btn-primary">Submit</button>
 				    			</div>
 				    		</div>
 				    		<div class="col-md-3">
@@ -269,8 +275,9 @@
 				    				<button type="button" id="reset" class="form-control btn btn-danger">Reset</button>
 				    			</div>
 				    		</div>
+				    		<!--</form>-->
 				    	</div>
-			    	</form>
+			    </form> 
 			    </div>
 			  </div>
 			</div>
@@ -286,3 +293,4 @@
 
   </body>
 </html>
+ --> --> -->
